fixing text-wrapping issue on mobile

--- a/SCSS/addCourse.scss
+++ b/SCSS/addCourse.scss
@@ -293,6 +293,7 @@
 						height: 18px;
 					}
 					h6 {
+						width: 81px;
 						font-size: 0.75rem;
 					}
 				}
